# openbedrock

./: .gitignore  .vimrc  AUTHORS  BUGS  ChangeLog  Dockerfile  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-Apache.md  README-CI.md  README-LOGS.md  README.Apache  README.md  RPM-GPG-KEY-openbedrock.org  TODO  TODO.md  aclocal.m4  bedrock.spec.in  bootstrap  br-alias  build  build-bedrock-rpm  build-github  build.yml  buildspec.yml  configure  configure.ac  copyright.txt  dependencies-ubuntu.lst  gnu-license.txt  perlcriticrc  perltidyrc  release  rpm-sign  setup-ubuntu.sh  t.pl  (+1 more)
cpan/: Makefile.am  Makefile.cpan  buildspec.yml  postamble  recommends  requires  requires-no-apache  test-requires
cpan/bedrock-core/: .gitignore  Dockerfile  Makefile.am  bedrock-core.mk  buildspec.yml  postamble  provides.list  requires  requires.in
cpan/bedrock-lite/: .gitignore  00-bedrock.t.in  Lite.pm.in  Makefile.am  bedrock-lite.mk  buildspec.yml  requires  requires.in
cpan/model/: .gitignore  Dockerfile  README-DOCKER.md  README.md  connect-db  package.lst  requires  test-model.pl
cpan/model/t/: 00-bedrock-model.t
docker/: .gitignore  Dockerfile  Dockerfile.AL2023  Dockerfile.Fedora  Dockerfile.al2023  Dockerfile.al2023-base  Dockerfile.bedrock-al2023-base  Dockerfile.bedrock-base-al2023  Dockerfile.bedrock-base-debian  Dockerfile.bedrock-debian-base  Dockerfile.bedrock-debian-lite  Dockerfile.bedrock-fedora-base  Dockerfile.bedrock-lite  Dockerfile.debian  Dockerfile.debian-base  Dockerfile.fedora  Dockerfile.fedora-base  Dockerfile.github  Dockerfile.in  Makefile.am  Makefile.dockerhub  README-github.md  README.md  ToolBox.patch  al2023.env  apache.mk  apache2.conf.in  bedrock-autocomplete.conf.in  bedrock-down  bedrock-image.mk  bedrock-info.conf.in  bedrock-session-files.conf.in  bedrock-up  bedrock.conf.in  bedrock.env  bedrock.env.in  bedrock.mk  bedrock.repo  cpanfile  cpanfile.snapshot  (+32 more)
docker/html/: autocomplete.roc  config.roc  env.roc  error.roc  index.rock  login.roc  notworking.html  session.roc
src/main/bedrock/config/: .gitignore  Makefile.am  Makefile.in  Session.xml.in  apache22-env-debian  apache22-env-debian.in  apache22-env-redhat  apache22-env-redhat.in  apache24-env-debian  apache24-env-debian.in  apache24-env-redhat  apache24-env-redhat.in  bedrock-autocomplete.conf.roc  bedrock-docs.yml  bedrock-manifest.roc  bedrock-miniserver.yml  bedrock-rest-framework.conf.in  bedrock-session-files.conf.roc  bedrock.conf.roc  bedrock.users  bedrock.xml.in  data-sources.xml.in  data-sources.xml.roc  dbi.conf.roc  default_form_config.json.roc  httpd-bedrock.conf.roc  log4perl.conf  markdown_paths.xml.in  miniserver-schema.json  mysql-session.sql  mysql-session.xml.in  mysql-session.xml.roc  perl_bedrock.conf.in  perl_bedrock.conf22.in  perl_bedrock.conf24.in  pod_paths.xml.in  postgres-session.xml.in  redis-cache.xml.in  redis-session.xml.in  rest.xml.in  (+7 more)
src/main/bedrock/config/admin/: bedrock.css  bedrock.js  index.roc  login-container.inc  plugins-container.inc  register-container.inc
src/main/bedrock/config/repo/: bedrock-repo.css  bedrock-repo.js  index-template.roc
src/main/bedrock/htdocs/: Makefile.am  Makefile.in  bedrock-rest-framework.jroc  directory-index.roc  error.roc  fancy-error.roc  itworks.rock  not-found.html  server-status.roc  unit_test.rock
src/main/bedrock/htdocs/register/: index.roc  register-notes.inc  register.css  register.js  register.xml
src/main/bedrock/img/: Makefile.am  Makefile.in
src/main/bedrock/include/: BedrockStyleGuide.md  Makefile.am  bedrock-docs-blms.inc  bedrock-docs-error.inc  bedrock-docs-hash-dump-body.inc  bedrock-docs-hash-dump.inc  bedrock-docs-header.inc  bedrock-docs-index.inc  bedrock-docs-listing-index.inc  bedrock-docs-listing.inc  bedrock-docs-plugins.inc  bedrock-docs-tag-groups.inc  bedrock-docs-ul.inc  bugs.md  contributing.md  examples.md  tutorials.md  welcome.md
src/main/perl/: Makefile.am  Makefile.in  README.md  bedrock-test-bed.pl  load-config.pl  run-tests  set-env  start-mysql.sh  test-tag.pl
src/main/perl/cgi-bin/: Makefile.am  Makefile.in  bedrock-docs.cgi.in  bedrock-service.cgi.in  bedrock.cgi  bedrock.cgi.in
src/main/perl/lib/: Bedrock.pm.in  Makefile.am  Makefile.in  README.md  bedrock-manifest.roc  bedrock_handler_common.pm.in  docker-up
src/main/perl/lib/BLM/: Array.pm.in  Awk.pm.in  Benchmark.pm.in  DBHandler.pm.in  Date.pm.in  FTP.pm.in  File.pm.in  FileIO.pm.in  Filter.pm.in  Fortune.pm.in  HtmlHelper.pm.in  Include.pm.in  IndexedTableHandler.pm.in  JSON.pm.in  Keys.pm.in  List.pm.in  Mail.pm.in  Makefile  Number.pm.in  OrderedObject.pm.in  Perldoc.pm.in  Plugin.pm.in  Prefix.pm.in  Recycle.pm.in  Redis.pm.in  SIMPLEFTP.pm.in  SMTP.pm.in  Series.pm.in  Session.pm.in  ShareDir.pm.in  SiteFactory.pm.in  Source.pm.in  Stat.pm.in  String.pm.in  Timenow.pm.in  XML.pm.in
src/main/perl/lib/Bedrock/: Application.pm.in  Array.pm.in  BedrockCGI.pm.in  BedrockConfig.pm.in  BedrockJSON.pm.in  Bootstrap.pm.in  BufferStream.pm.in  CSRF.pm.in  Cache.pm.in  Constants.pm.in  Context.pm.in  Dump.pm.in  Dumper.pm.in  Error.pm.in  Exception.pm.in  FastLog.pm  FauxHandler.pm.in  Handle.pm.in  Handler.pm.in  Hash.pm.in  InputSource.pm.in  Install.pm.in  Iterator.pm.in  JSON_PP_Ix.pm.in  LoadConfig.pm.in  Log.pm.in  Logger.pm.in  Makefile  MiniServer.pm.in  (+20 more)
src/main/perl/t/: 00-bedrock-xml.t  00-chomp.yml  00-load-config.t  00-var.yml  02-null.yml  03-if.yml  04-foreach.yml  05-iif.yml  06-open.yml  07-plugin.yml  09-sink.yml  10-try.yml  11-snippet.yml  12-sqlconnect.yml  13-sql.yml  15-include.yml  16-case.yml  17-array.yml  18-hash.yml  19-pebble.yml  20-benchmark.yml  21-sqlselect.yml  22-include.yml  23-mail.yml  24-cache.yml  25-sink-cache.yml  26-var-cache.yml  27-replace.yml  28-matches.yml  30-sql-session.yml  flush.txt  foreach.yml  if.t  if.txt  include.yml  log4perl.conf  multi-line.yml  null.txt  null.yml  plugin.yml  (+8 more)
src/main/resources/: Makefile.am  Makefile.in  bedrock-perl5-inc-begin-block.snippet.in
src/main/resources/htdocs/: Makefile.am  Makefile.in  error.rock
(+387 files in other folders)
